--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,6 +5,7 @@ const githubLink: string = "https://github.com/alexwkleung";
 <div class="navbar-container">
     <a href="/" class="navbar-a">Home</a>
     <a href="/projects" class="navbar-a">Projects</a>
+    <a href="/blog" class="blog-a">Blog</a>
     <a href={githubLink} class="navbar-a">GitHub</a>
 </div>
 
@@ -21,12 +22,11 @@ const githubLink: string = "https://github.com/alexwkleung";
 
     .navbar-container {
         position: relative;
-        /*border: 1px solid black;*/
         width: 640px;
         text-align: left;
         margin: 0 auto;
         top: 80px;
-        font-family: 'Inter-Regular', 'system-ui';
+        font-family: 'Inter-Regular';
         font-size: 18px;
     }
 
@@ -36,15 +36,20 @@ const githubLink: string = "https://github.com/alexwkleung";
         color: #5C6BC0;
     }
 
+    .blog-a {
+        text-decoration: none;
+        padding-right: 10px;
+        color: #5C6BC0;
+    }
+
     @media (max-width: 450px) {
         .navbar-container {
             position: relative;
-            /*border: 1px solid black;*/
             width: 300px;
             text-align: left;
             margin: 0 auto;
             top: 80px;
-            font-family: 'Inter-Regular', 'system-ui';
+            font-family: 'Inter-Regular';
             font-size: 18px;
         }
     }
