--- a/src/styles/markdown-post.css
+++ b/src/styles/markdown-post.css
@@ -7,56 +7,87 @@
     src: url('../styles/fonts/Inter-Bold.ttf');
 }
 
+body {
+    margin: 0;
+    -webkit-font-smoothing: subpixel-antialiased;
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    text-transform: none;
+}
+
 .markdown-article {
     position: relative;
     width: 640px;
     margin: 0 auto;
-    top: 95px;
+    top: 98px;
     padding-bottom: 100px;
-    font-size: 17px;
+    font-size: 18px;
 }
 
 .article-heading {
-    font-family: 'Inter-Bold', 'system-ui';
+    font-family: 'Inter-Bold';
     font-size: 32px;
 }
-
 .article-author {
-    font-family: 'Inter-Regular', 'system-ui';
-    font-size: 15px;
+    font-family: 'Inter-Regular';
+    font-size: 16px;
 }
 
 .article-date {
-    font-family: 'Inter-Regular', 'system-ui';
-    font-size: 15px;
+    font-family: 'Inter-Regular';
+    font-size: 16px;
     color: grey;
     padding-top: 10px;
 }
 
 .article-slot-container {
     position: relative;
-    top: 20px;
-    /*border: 1px solid black;*/
+    top: 15px;
 }
 
 .article-slot-container h1, h2, h3, h4, h5, h6 {
-    font-family: 'Inter-Bold', 'system-ui';
+    font-family: 'Inter-Bold';
 }
+.article-slot-container h1::before {
+    content: "# ";
+    color: grey;
+}
+.article-slot-container h2::before {
+    content: "## ";
+    color: grey;
+}
+.article-slot-container h3::before {
+    content: "### ";
+    color: grey;
+}
+.article-slot-container h4::before {
+    content: "#### ";
+    color: grey;
+}
+.article-slot-container h5::before {
+    content: "##### ";
+    color: grey;
+}
+.article-slot-container h6::before{
+    content: "###### ";
+    color: grey;
+}
+
 .article-slot-container p {
-    font-family: 'Inter-Regular', 'system-ui';
+    font-family: 'Inter-Regular';
 }
 .article-slot-container li {
-    font-family: 'Inter-Regular', 'system-ui';
+    font-family: 'Inter-Regular';
 }
 .article-slot-container ul {
-    font-family: 'Inter-Regular', 'system-ui';
+    font-family: 'Inter-Regular';
 }
 .article-slot-container blockquote  {
     border-left: 3px solid #909090;
     margin: 1.5em 2px;
     padding: 0.5em 10px;
-    font-family: 'Inter-Regular', sans-serif, 'system-ui';
-    font-size: 17px;
+    font-family: 'Inter-Regular';
+    font-size: 18px;
     color: grey; 
 }
 .article-slot-container blockquote:before {
@@ -74,7 +105,7 @@
 }
 .article-slot-container pre {
     padding: 15px 15px 15px 15px;
-    font-size: 15px;
+    font-size: 18px;
 }
 .article-slot-container p code {
     color: rgb(35, 35, 35);
@@ -89,6 +120,6 @@
         margin: 0 auto;
         top: 95px;
         padding-bottom: 100px;
-        font-size: 17px;
+        font-size: 18px;
     }
 }
