Change posts directory name to blog for consistent naming

--- a/src/components/MyBlog.astro
+++ b/src/components/MyBlog.astro
@@ -1,7 +1,7 @@
 ---
 import dayjs from 'dayjs'
 
-const allPosts = [...await Astro.glob('../pages/posts/*.md')];
+const allPosts = [...await Astro.glob('../pages/blog/*.md')];
 
 let postCount: string = "";
 
