--- a/src/components/MyBlog.astro
+++ b/src/components/MyBlog.astro
@@ -47,6 +47,16 @@ if(allPosts.length === 0) {
         src: url('../styles/fonts/Inter-Bold.ttf');
     }
 
+    body {
+        margin: 0;
+        -webkit-font-smoothing: subpixel-antialiased;
+        text-rendering: optimizeLegibility;
+        -moz-osx-font-smoothing: grayscale;
+        text-transform: none;
+        background-color: #ffffff;
+        color: #000000;
+    }
+
     .posts-list-container {
         position: relative;
         width: 640px;
