--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ const githubLink: string = "https://github.com/alexwkleung";
 <div class="navbar-container">
     <a href="/" class="navbar-a">Home</a>
     <a href="/projects" class="navbar-a">Projects</a>
-    <a href="/blog" class="blog-a">Blog</a>
+    <a href="/blog" class="navbar-a">Blog</a>
     <a href={githubLink} class="navbar-a">GitHub</a>
 </div>
 
@@ -31,12 +31,6 @@ const githubLink: string = "https://github.com/alexwkleung";
     }
 
     .navbar-a {
-        text-decoration: none;
-        padding-right: 10px;
-        color: #5C6BC0;
-    }
-
-    .blog-a {
         text-decoration: none;
         padding-right: 10px;
         color: #5C6BC0;
