--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -33,6 +33,8 @@ const { frontmatter } = Astro.props;
         text-rendering: optimizeLegibility;
         -moz-osx-font-smoothing: grayscale;
         text-transform: none;
+        background-color: #ffffff;
+        color: #000000;
     }
 
     .markdown-article-hr-intro {
