--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,5 +1,5 @@
 ---
-import Navbar from "../components/Navbar.astro"
+import Navbar from '../components/Navbar.astro'
 
 interface IProject {
     name: string,
@@ -82,6 +82,8 @@ const projectsDocTitle: string = "Alex Leung | Projects";
         text-rendering: optimizeLegibility;
         -moz-osx-font-smoothing: grayscale;
         text-transform: none;
+        background-color: #ffffff;
+        color: #000000;
     }
 
     #projects-main-container {
@@ -137,6 +139,7 @@ const projectsDocTitle: string = "Alex Leung | Projects";
         font-size: 16px;
         background-color: rgb(217 215 215);
         margin-right: 7px;
+        color: #000000;
     }
 
     @media (max-width: 450px) {
