--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,8 @@ body {
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
     text-transform: none;
+    background-color: #ffffff;
+    color: #000000;
 }
 
 .home-info-container {
