--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,7 +6,7 @@ const githubLink: string = "https://github.com/alexwkleung";
     <a href="/" class="navbar-a">Home</a>
     <a href="/projects" class="navbar-a">Projects</a>
     <a href="/blog" class="navbar-a">Blog</a>
-    <a href={githubLink} class="navbar-a">GitHub</a>
+    <a href={githubLink} class="navbar-a" target="_blank">GitHub</a>
 </div>
 
 <style>
