--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,12 @@
 ---
 import NavBar from '../components/Navbar.astro'
 import MyBlog from '../components/MyBlog.astro'
-
-const blogDocTitle: string = "Alex Leung | Blog"
 ---
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>{blogDocTitle}</title>
+    <title>Blog | Alex Leung</title>
 </head>
 <NavBar></NavBar>
 <MyBlog></MyBlog>
