--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,13 @@
 ---
 import '../styles/global.css'
 import Navbar from '../components/Navbar.astro'
-
-const indexDocTitle: string = "Alex Leung | Home";
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>{indexDocTitle}</title>
+		<title>Home | Alex Leung</title>
 	</head>
 	<body>
 		<Navbar></Navbar>
