--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,50 +1,174 @@
 ---
 const githubLink: string = "https://github.com/alexwkleung";
 ---
+<header>
+    <div id="navbar-container">
+        <div id="header-bar">
+            <div id="navbar-left">
+                <h1 id="navbar-header"><a href="/">Alex Leung</a></h1>
+            </div>
+        
+            <div id="navbar-right">
+                <button id="mobile-nav-button">
+                    <!-- fontawesome bars-solid -->
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/>
+                    </svg>
+                </button>
+            
+                <button id="mobile-nav-close-button">
+                    <!-- fontawesome xmark-solid -->
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href={githubLink} target="_blank">GitHub</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-<div class="navbar-container">
-    <a href="/" class="navbar-a">Home</a>
-    <a href="/projects" class="navbar-a">Projects</a>
-    <a href="/blog" class="navbar-a">Blog</a>
-    <a href={githubLink} class="navbar-a" target="_blank">GitHub</a>
-</div>
-
-<style>
-    @font-face {
-        font-family: 'Inter-Regular';
-        src: url('../styles/fonts/Inter-Regular.ttf');
+<style>     
+    nav { 
+        display: none;
     }
 
-    @font-face {
-        font-family: 'Inter-Bold';
-        src: url('../styles/fonts/Inter-Bold.ttf');
+    nav ul {
+        padding-left: 0px;
     }
-
-    .navbar-container {
-        position: relative;
-        width: 640px;
-        text-align: left;
-        margin: 0 auto;
-        top: 80px;
-        font-family: 'Inter-Regular';
-        font-size: 18px;
+    nav ul li {
+        list-style-type: none;
+        margin-top: 25px;
     }
-
-    .navbar-a {
-        text-decoration: none;
+    nav ul li a {
         padding-right: 10px;
+        text-decoration: none;
+        font-size: 1.2em;
+    }
+    nav ul li a:link {
+        color: #5C6BC0;   
+    }
+    nav ul li a:visited, nav ul li a:active, nav ul li a:focus {
         color: #5C6BC0;
     }
 
-    @media (max-width: 450px) {
-        .navbar-container {
-            position: relative;
-            width: 300px;
-            text-align: left;
-            margin: 0 auto;
-            top: 80px;
-            font-family: 'Inter-Regular';
-            font-size: 18px;
+    nav.show {
+        display: block;
+        text-align: center;
+    }
+    nav.hide {
+        display: none;
+    }
+
+    #header-bar {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+    }
+
+    #mobile-nav-button {
+        background-color: transparent;
+        border: none;
+        width: 50px;
+        height: 100%;
+        margin-top: 0px;
+        margin-right: 10px;
+    }
+    #mobile-nav-close-button {
+        background-color: transparent;
+        border: none;
+        width: 50px;
+        height: 100%;
+        display: none;
+        margin-top: 0px;
+        margin-right: 10px;
+    }
+
+    #mobile-nav-button.show, #mobile-nav-close-button.show {
+        display: block;
+    }
+    #mobile-nav-button.hide, #mobile-nav-close-button.hide {
+        display: none;
+    }
+
+    #navbar-header {
+        font-size: 1.6em;
+        margin-left: 20px;
+    }
+    #navbar-header a {
+        text-decoration: none;
+        color: black;
+    }
+
+    @media(min-width: 680px) {
+        nav {
+            display: block;
+            margin-top: 26px;
+        }
+
+        nav ul {
+            display: flex;
+        }
+
+        nav ul li {
+            list-style-type: none;
+            margin-top: 0px;
+        }
+
+        nav ul li a {
+            padding-right: 50px;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+        #mobile-nav-button {
+            display: none;
+        }
+        #mobile-nav-close-button {
+            display: none;
+        }
+
+        #navbar-container {
+            display: flex;
+            justify-content: space-between;
         }
     }
 </style>
+
+<script>
+    const mobileNavButton: HTMLElement = document.querySelector('#mobile-nav-button') as HTMLElement;
+    const mobileNavCloseButton: HTMLElement = document.querySelector('#mobile-nav-close-button') as HTMLElement;
+    const navbarContainer: HTMLElement = document.querySelector('nav') as HTMLElement;
+
+    function mobileNavButtonEvent(): void {
+        navbarContainer.classList.toggle('show');
+        mobileNavButton.classList.toggle('hide');
+        mobileNavCloseButton.classList.toggle('show');
+    }
+
+    function mobileNavCloseButtonEvent(): void {
+        // state test
+        if (navbarContainer.classList.contains('show') && mobileNavCloseButton.classList.contains('show')) {
+            navbarContainer.classList.toggle('show');
+            mobileNavCloseButton.classList.toggle('show');
+        }
+
+        // state test
+        if (mobileNavButton.classList.contains('hide')) {
+            mobileNavButton.classList.toggle('hide');
+        }
+    }
+
+    function toggleNav(): void {
+        mobileNavButton.addEventListener('click', mobileNavButtonEvent);
+        mobileNavCloseButton.addEventListener('click', mobileNavCloseButtonEvent);
+    }
+    toggleNav();
+</script>
