--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,54 +1,48 @@
 ---
 import Navbar from '../components/Navbar.astro'
-import dayjs from 'dayjs'
+import Footer from '../components/Footer.astro'
+
+import '../styles/styles.css'
 import '../styles/markdown-post.css'
+
+import dayjs from 'dayjs'
 
 const { frontmatter } = Astro.props;
 ---
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>{frontmatter.title} | Alex Leung</title>
-</head>
-<Navbar></Navbar>
-<article class="markdown-article">
-    <h1 class="article-heading">{frontmatter.title}</h1>
-    <span class="article-author">
-        By {frontmatter.author}
-        <div class="article-date">
-            {dayjs(frontmatter.date).format('MMMM DD, YYYY')}
-        </div>
-        <hr class="markdown-article-hr-intro">
-    </span>
-    <div class="article-slot-container">
-        <slot></slot>
-    </div>
-</article>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{frontmatter.title} | Alex Leung</title>
+	</head>
+	<body>
+		<div id="root">
+			<Navbar></Navbar>
+			<main>
+                <article class="markdown-article">
+                    <h2 class="article-heading">{frontmatter.title}</h2>
+                    <span class="article-author">
+                        By {frontmatter.author}
+                        <div class="article-date">
+                            {dayjs(frontmatter.date).format('MMMM DD, YYYY')}
+                        </div>
+                        <hr class="markdown-article-hr-intro">
+                    </span>
+                    <div class="article-slot-container">
+                        <slot></slot>
+                    </div>
+                </article>
+			</main>
+			<Footer></Footer>
+		</div>
+	</body>
+</html>
 
 <style>
-    body {
-        margin: 0;
-        -webkit-font-smoothing: subpixel-antialiased;
-        text-rendering: optimizeLegibility;
-        -moz-osx-font-smoothing: grayscale;
-        text-transform: none;
-        background-color: #ffffff;
-        color: #000000;
-    }
-
     .markdown-article-hr-intro {
         border-bottom: none;
         border-color: #000000;
         margin-top: 30px;
     }
 </style>
-
-<script>
-    function openAnchorNewTab(): void {
-        document.querySelectorAll(".article-slot-container a").forEach((el) => {
-            el.setAttribute("target", "_blank");
-        })
-    }
-    openAnchorNewTab();
-</script>
