--- a/src/styles/markdown-post.css
+++ b/src/styles/markdown-post.css
@@ -1,41 +1,4 @@
-@font-face {
-    font-family: 'Inter-Regular';
-    src: url('../styles/fonts/Inter-Regular.ttf');
-}
-@font-face {
-    font-family: 'Inter-Bold';
-    src: url('../styles/fonts/Inter-Bold.ttf');
-}
-
-body {
-    margin: 0;
-    -webkit-font-smoothing: subpixel-antialiased;
-    text-rendering: optimizeLegibility;
-    -moz-osx-font-smoothing: grayscale;
-    text-transform: none;
-}
-
-.markdown-article {
-    position: relative;
-    width: 640px;
-    margin: 0 auto;
-    top: 98px;
-    padding-bottom: 100px;
-    font-size: 18px;
-}
-
-.article-heading {
-    font-family: 'Inter-Bold';
-    font-size: 32px;
-}
-.article-author {
-    font-family: 'Inter-Regular';
-    font-size: 16px;
-}
-
 .article-date {
-    font-family: 'Inter-Regular';
-    font-size: 16px;
     color: grey;
     padding-top: 10px;
 }
@@ -45,19 +8,6 @@ body {
     top: 15px;
 }
 
-.article-slot-container h1, h2, h3, h4, h5, h6 {
-    font-family: 'Inter-Bold';
-}
-
-.article-slot-container p {
-    font-family: 'Inter-Regular';
-}
-.article-slot-container li {
-    font-family: 'Inter-Regular';
-}
-.article-slot-container ul {
-    font-family: 'Inter-Regular';
-}
 .article-slot-container blockquote  {
     border-left: 3px solid #909090;
     margin: 1.5em 2px;
@@ -88,14 +38,7 @@ body {
     border-radius: 10px;
     padding: 2px 2px 2px 2px;
 }
-
-@media (max-width: 450px) {
-    .markdown-article {
-        position: relative;
-        width: 300px;
-        margin: 0 auto;
-        top: 95px;
-        padding-bottom: 100px;
-        font-size: 18px;
-    }
+.article-slot-container img {
+    max-width: 100%;
+    height: auto;
 }
